<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.neodix42</groupId>
        <artifactId>top</artifactId>
        <version>0.4.0</version>
    </parent>

    <artifactId>emulator</artifactId>
    <name>TON Java Emulator wrapper</name>

    <description>Java wrapper for emulator shared library.</description>

    <url>https://github.com/neodiX42/ton4j</url>

    <licenses>
        <license>
            <name>GNU General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.html</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>neodiX</name>
            <email>neodiX@ton.org</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/neodiX42/ton4j.git</connection>
        <developerConnection>scm:git:ssh://github.com/neodiX42/ton4j.git</developerConnection>
        <url>https://github.com/neodiX42/ton4j/tree/main</url>
    </scm>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.neodix42</groupId>
            <artifactId>utils</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.vmlens</groupId>
            <artifactId>concurrent-junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.neodix42</groupId>
            <artifactId>tonlib</artifactId>
            <version>0.4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.neodix42</groupId>
            <artifactId>liteclient</artifactId>
            <version>0.4.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>